--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,8 +1,45 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    <div class="container topnav">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand topnav logo-container" href="#">
+                <img src="images/lyncDigitalLogo.png" alt="JOSU" class="logo-binder"/>
+            </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+<!-- Header -->
+<div class="intro-header home-banner">
+    <div class="container banner-content-container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="intro-message banner-content">
+                    <h1>Digtial Lync Academy</h1>
+                    <h3>Training Tracking System</h3>
+                    <hr class="intro-divider">
+                    <ul class="list-inline intro-social-buttons" data-ng-if="!roleSelected">
+                        <li data-ng-repeat="role in selectedRole">
+                            <a class="btn btn-default btn-lg" data-ng-click="roleIsSelected(role)"><i class="fa fa-user fa-fw"></i><span class="network-name">{{role}}</span></a>
+                        </li>
+                    </ul>
+                    <ul class="list-inline" data-ng-if="roleSelected">
+                        <span>
+                            <input class="form-control input-lg submitId" id="inputlg" type="text" ng-model="userId">
+                            <button class="btn btn-success btn-lg" data-ng-click="isIdSubmit()">Submit</button>
+                        </span>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.container -->
 </div>
