--- a/app/views/home.html
+++ b/app/views/home.html
@@ -33,8 +33,8 @@
                     </ul>
                     <ul class="list-inline" data-ng-if="roleSelected">
                         <span>
-                            <input class="form-control input-lg submitId" id="inputlg" type="text" ng-model="userId">
-                            <button class="btn btn-success btn-lg" data-ng-click="isIdSubmit()">Submit</button>
+                            <input class="form-control input-lg submitId" id="inputlg" type="text" data-ng-model="id">
+                            <button class="btn btn-success btn-lg" data-ng-click="isIdSubmit(id)">Submit</button>
                         </span>
                     </ul>
                 </div>
