--- a/app/views/home.html
+++ b/app/views/home.html
@@ -35,6 +35,7 @@
                         <span>
                             <input class="form-control input-lg submitId" id="inputlg" type="text" data-ng-model="id">
                             <button class="btn btn-success btn-lg" data-ng-click="isIdSubmit(id)">Submit</button>
+                            <p class="errorMessage" data-ng-bind="errorMessage"></p>
                         </span>
                     </ul>
                 </div>
