First Phase : CheckIn and checkOut for Trainer.

--- a/app/styles/_dashboard.scss
+++ b/app/styles/_dashboard.scss
@@ -10,7 +10,7 @@
     }
     .course-container-isChecked {
         border-radius: 4px;
-        background-color: black;
+        background-color: #2fa1da;
         color: white;
         border: 1px solid white;
     }
