--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -25,6 +25,10 @@
         width: 30% !important;
         margin: auto !important;
         display: inline-block;
+        border-style:none;
+        border-radius:none;
+        padding:12px;
+        color:$black;
     }
 }
 
@@ -127,6 +131,8 @@
     }
 }
 
+
+
 @media(max-width:767px) {
     .intro-message {
         padding-bottom: 15%;
@@ -138,6 +144,9 @@
         display: block;
         margin-bottom: 20px;
         padding: 0;
+        .intro-social-buttons > li{
+        margin-top:30px;
+        }
     }
     ul.intro-social-buttons > li:last-child {
         margin-bottom: 0;
