Error message  flag

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -24,7 +24,7 @@
             <div class="col-lg-12">
                 <div class="intro-message banner-content">
                     <h1>Digital Lync Academy</h1>
-                    <h3>Training Tracking System</h3>
+                    <h3>Digital Rastreo</h3>
                     <hr class="intro-divider">
                     <ul class="list-inline intro-social-buttons" data-ng-if="!roleSelected">
                         <li data-ng-repeat="role in selectedRole">
@@ -33,9 +33,9 @@
                     </ul>
                     <ul class="list-inline" data-ng-if="roleSelected">
                         <span>
-                            <input class="form-control input-lg submitId" id="inputlg" type="text" data-ng-model="id">
-                            <button class="btn btn-success btn-lg" data-ng-focus="fnHideErrorMsg()" data-ng-click="isIdSubmit(id)">Submit</button>
-                            <p class="errorMessage" data-ng-bind="errorMessage"></p>
+                            <input class="form-control input-lg submitId" id="inputlg" type="text" data-ng-model="id" data-ng-focus="fnHideErrorMsg()">
+                            <button class="btn btn-success btn-lg" data-ng-click="isIdSubmit(id)">Submit</button>
+                            <p class="errorMessage" data-ng-if="errorMessageFlag" data-ng-bind="errorMessage" data-ng-required="true"></p>
                         </span>
                     </ul>
                 </div>
