--- a/app/views/dashboard/dashboard.html
+++ b/app/views/dashboard/dashboard.html
@@ -4,7 +4,7 @@
             <div class="col-lg-12">
                 <div class="intro-message banner-content">
                     <h1>Lync Digital Academy</h1>
-                    <h3>Training Tracking System</h3>
+                    <h3>Digital Rastreo</h3>
                     <hr class="intro-divider">
                     <div data-ng-if="isTrainer">
                         <h2>{{user}}</h2>
